@@ -11,10 +11,11 @@ import com.donny.dendrofinance.json.JsonObject;
 import com.donny.dendrofinance.json.JsonString;
 import com.donny.dendrofinance.util.ExportableToJson;
 
+import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Comparator;
 
-public class Exchange implements ExportableToJson {
+public class Exchange implements ExportableToJson, Serializable {
     public final String NAME, ALT;
     public final ArrayList<String> SUPPORTED;
     public final ArrayList<JsonObject> STAKING;
